<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_black"
            android:title="@string/search" />
    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/title_dashboard" />

        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite" />

    </group>


</menu>
